# mlprague2024

./: README.md  prepare-data.ipynb  pyproject.toml  rag-app.ipynb
data/: validation_evaluator_model.csv  validation_rag_questions.csv
data/scrape-january-2024/: 2022 Austrian presidential election - Wikipedia.txt  2022 Bulgarian parliamentary election - Wikipedia.txt  2022 French presidential election - Wikipedia.txt  2022 Hungarian parliamentary election - Wikipedia.txt  2022 Latvian parliamentary election - Wikipedia.txt  2022 Maltese general election - Wikipedia.txt  2022 Slovenian parliamentary election - Wikipedia.txt  2022 South Korean presidential election - Wikipedia.txt  2022 Turkmenistan presidential election - Wikipedia.txt  2023 Bulgarian parliamentary election - Wikipedia.txt  2023 Czech presidential election - Wikipedia.txt  2023 Egyptian presidential election - Wikipedia.txt  2023 Estonian parliamentary election - Wikipedia.txt  2023 Finnish parliamentary election - Wikipedia.txt  2023 Polish parliamentary election - Wikipedia.txt  2023 Serbian parliamentary election - Wikipedia.txt  2023 Singaporean presidential election - Wikipedia.txt  2023 Slovak parliamentary election - Wikipedia.txt  2023 Turkish parliamentary election - Wikipedia.txt  2023 Turkish presidential election - Wikipedia.txt  2024 Taiwanese presidential election - Wikipedia.txt  2024 United States presidential election - Wikipedia.txt
presentation/: automated_evaluation.pptx
