[tool.poetry]
name = "mlprague-2024"
version = "0.1.0"
description = "repository holding all codes and data for workshop \"Automated evaluation of LLM based QA systems\" for MLPrague 2024"
authors = ["Dataclair.ai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
jupyter = "^1.0.0"
loguru = "^0.7.2"
openai = "^1.0.0"
chromadb = "^0.4.22"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
python-dotenv = "^1.0.1"
matplotlib = "^3.8.4"
openpyxl = "^3.1.2"
scikit-learn = "^1.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py310" # the python version to target, useful when considering code upgrades, defaults to "py310"